# readest

./: .dockerignore  .gitignore  .gitmodules  .prettierignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.devcontainer/: devcontainer.json
.husky/: pre-push
.zed/: settings.json
apps/readest-app/: .env  (+26 more)
apps/readest-app/src-tauri/: Cargo.toml  Info-ios.plist  Info.plist  build.rs  tauri.conf.json
apps/readest-app/src-tauri/capabilities/: default.json  desktop.json  webdriver-remote.json
apps/readest-app/src-tauri/capabilities-extra/: webdriver.json
apps/readest-app/src-tauri/permissions/autogenerated/: allow_paths_in_scopes.toml  auth_with_safari.toml  clear_book_presence.toml  clip_url.toml  download_file.toml  extract_epub_cover_full.toml  extract_mobi_cover_full.toml  get_environment_variable.toml  get_executable_dir.toml  install_nightly_update.toml  is_updater_disabled.toml  parse_epub_full.toml  parse_epub_metadata.toml  parse_mobi_metadata.toml  read_dir.toml  set_traffic_lights.toml  set_webview_info.toml  show_lookup_popover.toml  spawn_fresh_browser.toml  start_apple_sign_in.toml  start_server.toml  update_book_presence.toml  upload_file.toml  verify_update_signature.toml
apps/readest-app/src-tauri/plugins/tauri-plugin-native-bridge/: Cargo.toml  README.md  build.rs
apps/readest-app/src-tauri/plugins/tauri-plugin-native-bridge/android/: build.gradle.kts
apps/readest-app/src-tauri/plugins/tauri-plugin-native-bridge/android/src/androidTest/java/: ExampleInstrumentedTest.kt  ReadingWidgetStoreTest.kt
apps/readest-app/src-tauri/plugins/tauri-plugin-native-bridge/android/src/foss/java/com/readest/native_bridge/: BillingManager.kt
apps/readest-app/src-tauri/plugins/tauri-plugin-native-bridge/android/src/googleplay/java/com/readest/native_bridge/: BillingManager.kt
apps/readest-app/src-tauri/plugins/tauri-plugin-native-bridge/android/src/main/: AndroidManifest.xml
apps/readest-app/src-tauri/plugins/tauri-plugin-native-bridge/android/src/main/java/: ClipUrlController.kt  EinkRefreshController.kt  LookupChoiceReceiver.kt  LookupDispatch.kt  NativeBridge.kt  NativeBridgePlugin.kt  ReadingWidgetProviders.kt  ReadingWidgetStore.kt
apps/readest-app/src-tauri/plugins/tauri-plugin-native-bridge/android/src/main/res/drawable/: ic_widget_pause.xml  ic_widget_play.xml  ic_widget_skip_next.xml  ic_widget_skip_previous.xml  widget_card_bg.xml
apps/readest-app/src-tauri/plugins/tauri-plugin-native-bridge/android/src/main/res/layout/: widget_reading.xml
apps/readest-app/src-tauri/plugins/tauri-plugin-native-bridge/android/src/main/res/xml/: widget_reading_info.xml
apps/readest-app/src-tauri/plugins/tauri-plugin-native-bridge/android/src/test/java/: ExampleUnitTest.kt  LookupDispatchTest.kt
apps/readest-app/src-tauri/plugins/tauri-plugin-native-bridge/ios/: Package.swift  README.md
apps/readest-app/src-tauri/plugins/tauri-plugin-native-bridge/ios/Sources/: AppGroupBridge.swift  ClipUrlController.swift  ContextMenuSuppressor.swift  NativeBridgePlugin.swift  ReadingWidgetWriter.swift  TextSelectionSuppressor.swift
apps/readest-app/src-tauri/plugins/tauri-plugin-native-bridge/ios/Tests/PluginTests/: PluginTests.swift
apps/readest-app/src-tauri/plugins/tauri-plugin-native-bridge/permissions/: default.toml
apps/readest-app/src-tauri/plugins/tauri-plugin-native-bridge/permissions/autogenerated/: reference.md
apps/readest-app/src-tauri/plugins/tauri-plugin-native-bridge/permissions/autogenerated/commands/: auth_with_custom_tab.toml  capture_webview_region.toml  clear_lookup_dictionary.toml  clear_secure_item.toml  clip_url.toml  copy_uri_to_path.toml  get_lookup_dictionary.toml  get_secure_item.toml  get_status_bar_height.toml  get_sys_fonts_list.toml  install_package.toml  intercept_keys.toml  lock_screen_orientation.toml  refresh_eink_screen.toml  save_image_to_gallery.toml  set_secure_item.toml  set_system_ui_visibility.toml  set_text_selection_suppressed.toml  show_lookup_popover.toml  update_reading_widget.toml  use_background_audio.toml
apps/readest-app/src-tauri/plugins/tauri-plugin-native-bridge/permissions/schemas/: schema.json
apps/readest-app/src-tauri/plugins/tauri-plugin-native-bridge/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
apps/readest-app/src-tauri/plugins/tauri-plugin-native-bridge/src/platform/: macos.rs
apps/readest-app/src-tauri/plugins/tauri-plugin-native-bridge/tests/: capture_webview_region.rs  reading_widget.rs
apps/readest-app/src-tauri/plugins/tauri-plugin-native-tts/: build.rs
apps/readest-app/src-tauri/plugins/tauri-plugin-native-tts/android/src/main/java/: MediaPlaybackService.kt  NativeTTSPlugin.kt
apps/readest-app/src-tauri/plugins/tauri-plugin-native-tts/ios/Sources/: NativeTTSPlugin.swift
apps/readest-app/src-tauri/plugins/tauri-plugin-native-tts/permissions/: default.toml
apps/readest-app/src-tauri/plugins/tauri-plugin-native-tts/permissions/autogenerated/: reference.md
apps/readest-app/src-tauri/plugins/tauri-plugin-native-tts/permissions/autogenerated/commands/: playout_control.toml  playout_enqueue.toml  playout_position.toml  update_carplay_state.toml
apps/readest-app/src-tauri/plugins/tauri-plugin-native-tts/permissions/schemas/: schema.json
apps/readest-app/src-tauri/plugins/tauri-plugin-native-tts/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
apps/readest-app/src-tauri/src/: apple_auth.rs  clip_url.rs  dir_scanner.rs  epub_parser.rs  lib.rs  mobi_parser.rs  nightly_update.rs  parser_common.rs  range_file.rs  sentry_config.rs  spawn_fresh_browser.rs  traffic_light.rs  transfer_file.rs  window_state.rs
apps/readest-app/src-tauri/src/android/: eink.rs
apps/readest-app/src-tauri/src/macos/: apple_auth.rs  mod.rs  os_version.rs  safari_auth.rs  system_dictionary.rs  traffic_light.rs
docker/: .env.example  README.md  compose.build.yaml  compose.dev.yaml  compose.yaml
fastlane/: Fastfile  README.md
ops/: flake.nix
patches/: @ai-sdk__provider-utils@3.0.25.patch  (+1 more)
(+2053 files in other folders)
